@@ -211,6 +211,7 @@ message TQueryOptions
     optional uint64 deadline = 9;
     optional uint64 memory_limit_per_node = 10;
     optional string execution_pool = 11;
+    optional bool suppress_access_tracking = 12;
 }
 
 message TDataRanges
