@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* ifsmirnov: YT-10908. GetMountInfo and CheckPermission no more modify access_time. Update masters via snapshot.
 * shakurov: Master snapshot format was changed by 8b6665a6a2. Update masters via snapshot.
 * babenko: Delayed recomputation of membership closure. Update masters via snapshot.
 * ermolovd: Stricter schema validation. Update masters via snapshot.
